@@ -1,5 +1,6 @@
 December 2017
   - PHP 5.6 and Internet Explorer 11 or later required
+  - Account status also shows expired accounts
 
 
 19.09.2017 6.1
